# fastapiwithtdd

./: README.md  docker-compose.yml  pyproject.toml
store/: main.py
store/core/: config.py
store/db/: mongo.py
store/schemas/: product.py
store/tests/: conftest.py  factories.py
store/tests/schemas/: test_product.py
store/tests/usecases/: test_product.py
store/usecases/: product.py
