[tool.poetry]
name = "fastapiwithtdd"
version = "0.1.0"
description = "Project Rest API with tdd"
authors = ["CHRISTIAN S BARBOSA <32348713+djchristiandf@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
apollo-settings = "^0.2.0"
motor = "^3.4.0"
fastapi = "^0.110.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
